feat: variables de entorno y configuracion de CORS
